--- a/WolfJourney/Assembly-CSharp.csproj
+++ b/WolfJourney/Assembly-CSharp.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Assets\Scripts\StateMachines\Player\PlayerFreeLookState.cs" />
     <Compile Include="Assets\Scripts\StateMachines\Player\PlayerAttackingState.cs" />
     <Compile Include="Assets\Scripts\StateMachines\StateMachine.cs" />
+    <Compile Include="Assets\Scripts\StateMachines\Player\PlayerDodgeState.cs" />
     <Compile Include="Assets\Scripts\StateMachines\Player\PlayerBaseState.cs" />
     <Compile Include="Assets\Scripts\StateMachines\Player\PlayerStateMachine.cs" />
     <Compile Include="Assets\Scripts\Controls.cs" />
