--- a/WolfJourney/Assembly-CSharp.csproj
+++ b/WolfJourney/Assembly-CSharp.csproj
@@ -57,26 +57,29 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\ForceReceiver.cs" />
+    <Compile Include="Assets\Scripts\StateMachines\Enemy\EnemyIdleState.cs" />
+    <Compile Include="Assets\Scripts\StateMachines\Enemy\EnemyStateMachine.cs" />
+    <Compile Include="Assets\Scripts\StateMachines\Enemy\EnemyAttackingState.cs" />
     <Compile Include="Assets\Scripts\StateMachines\State.cs" />
     <Compile Include="Assets\Scripts\StateMachines\Player\Dodge.cs" />
     <Compile Include="Assets\Scripts\StateMachines\Player\PlayerFallingState.cs" />
     <Compile Include="Assets\Scripts\Attack.cs" />
     <Compile Include="Assets\Scripts\InputHandler.cs" />
-    <Compile Include="Assets\Scripts\StateMachines\Player\Health.cs" />
+    <Compile Include="Assets\Scripts\Health.cs" />
     <Compile Include="Assets\Scripts\WeaponDamage.cs" />
     <Compile Include="Assets\Scripts\StateMachines\Player\PlayerJumpingState.cs" />
     <Compile Include="Assets\Scripts\WeaponHandler.cs" />
+    <Compile Include="Assets\Scripts\StateMachines\Enemy\EnemyBaseState.cs" />
     <Compile Include="Assets\Scripts\StateMachines\Player\PlayerFreeLookState.cs" />
     <Compile Include="Assets\Scripts\StateMachines\Player\PlayerAttackingState.cs" />
+    <Compile Include="Assets\Scripts\StateMachines\Enemy\EnemyChasingState.cs" />
     <Compile Include="Assets\Scripts\StateMachines\StateMachine.cs" />
     <Compile Include="Assets\Scripts\StateMachines\Player\PlayerDodgeState.cs" />
     <Compile Include="Assets\Scripts\StateMachines\Player\PlayerBaseState.cs" />
     <Compile Include="Assets\Scripts\StateMachines\Player\PlayerStateMachine.cs" />
     <Compile Include="Assets\Scripts\Controls.cs" />
-    <Compile Include="Assets\Scripts\StateMachines\Enemy\EnemyStateMachine.cs" />
-    <Compile Include="Assets\Scripts\StateMachines\Enemy\EnemyBaseState.cs" />
-    <Compile Include="Assets\Scripts\StateMachines\Enemy\EnemyIdleState.cs" />
-    <Compile Include="Assets\Scripts\StateMachines\Enemy\EnemyChasingState.cs" />
+    <Compile Include="Assets\Scripts\StateMachines\Player\PlayerImpactState.cs" />
+    <Compile Include="Assets\Scripts\StateMachines\Enemy\EnemyImpactState.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
