--- a/WolfJourney/Assembly-CSharp.csproj
+++ b/WolfJourney/Assembly-CSharp.csproj
@@ -70,11 +70,13 @@
     <Compile Include="Assets\Scripts\WeaponDamage.cs" />
     <Compile Include="Assets\Scripts\StateMachines\Player\PlayerJumpingState.cs" />
     <Compile Include="Assets\Scripts\WeaponHandler.cs" />
+    <Compile Include="Assets\Scripts\StateMachines\Player\PlayerMidAirJumpingState.cs" />
     <Compile Include="Assets\Scripts\StateMachines\Player\PlayerImpactState.cs" />
     <Compile Include="Assets\Scripts\StateMachines\Enemy\EnemyBaseState.cs" />
     <Compile Include="Assets\Scripts\StateMachines\Player\PlayerFreeLookState.cs" />
     <Compile Include="Assets\Scripts\StateMachines\Player\PlayerAttackingState.cs" />
     <Compile Include="Assets\Scripts\StateMachines\Enemy\EnemyDeadState.cs" />
+    <Compile Include="Assets\CameraMovement.cs" />
     <Compile Include="Assets\Scripts\StateMachines\Enemy\EnemyChasingState.cs" />
     <Compile Include="Assets\Scripts\StateMachines\StateMachine.cs" />
     <Compile Include="Assets\Scripts\StateMachines\Player\PlayerDeadState.cs" />
